[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/StoryScene.gd" id="1_story"]
[ext_resource type="PackedScene" path="res://Scenes/DialogueSystem.tscn" id="2_dialog"]

[node name="StoryScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_story")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="Characters" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HeroSprite" type="TextureRect" parent="Characters"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 1
stretch_mode = 5

[node name="Spacer" type="Control" parent="Characters"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OtherSprite" type="TextureRect" parent="Characters"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2
size_flags_horizontal = 8
expand_mode = 1
stretch_mode = 5

[node name="DialogueSystem" parent="." instance=ExtResource("2_dialog")]
visible = false
